testsuite/tests/checks/expression_functions/test.out
foo.ads:2:13: error: expression function
2 |    function F (I : Integer) return Integer is   --  FLAG
  |             ^ 

